--- a/assets/plugins/datatables/extensions/FixedColumns/examples/bootstrap.html
+++ b/assets/plugins/datatables/extensions/FixedColumns/examples/bootstrap.html
@@ -61,7 +61,7 @@ $(document).ready(function() {
 				<p>FixedColumns is initialised using the constructor <code>new $.fn.dataTable.FixedColumns();</code> - shown below.</p>
 			</div>
 
-			<table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
+			<table id="example" class="table table-striped table-bordered table-condensed" cellspacing="0" width="100%">
 				<thead>
 					<tr>
 						<th>First name</th>
